# homeassistant-ok

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.da.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  hacs.json  pyproject.toml  requirements-manifest.txt
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: api_behavior_change.yml  bug_report.yml  config.yml  feature_request.yml  setup_problem.yml
.github/workflows/: conventional-commits.yml  release.yml  validate.yml
blueprints/script/ok/: schedule_charging.yaml
custom_components/ok/: __init__.py  _integration.py  action.py  button.py  config_flow.py  const.py  coordinator.py  datetime.py  diagnostics.py  entity.py  icons.json  manifest.json  schedule.py  sensor.py  services.yaml  switch.py
custom_components/ok/api/: __init__.py  _client.py  _errors.py  _firestore.py  _models.py  _signing.py
custom_components/ok/translations/: da.json  en.json
docker/: README.md
docs/: API_CLIENT.md  ARCHITECTURE.md  ENTITY_MODEL.md  REPO_INVARIANTS.md  TROUBLESHOOTING.md  USAGE_EXAMPLES.md  VALIDATION.md
tests/: conftest.py  test_client_async.py  test_client_sync.py  test_energy_price_sensor.py  test_firestore.py  test_package_metadata.py  test_signing.py
tests/custom_components/ok/: conftest.py  entity_helpers.py  test_action.py  test_blueprints.py  test_button.py  test_config_flow.py  test_coordinator.py  test_coordinator_edges.py  test_datetime.py  test_diagnostics.py  test_icons.py  test_init.py  test_sensor.py  test_sensor_edges.py  test_services.py  test_services_yaml.py  test_switch.py
tests/custom_components/ok/fixtures/: current_chargings.json  device_settings.json  locations.json  prices.json  receipts.json
tools/: validate_brand_images.py
