[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "homeassistant-ok"
version = "0.1.0"
description = "Home Assistant custom integration for OK home charging"
readme = "README.md"
requires-python = ">=3.13.2"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "homeassistant-ok contributors" }]
keywords = ["home-assistant", "ok", "charging", "ev", "firestore"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "httpx>=0.28,<1",
]

[project.optional-dependencies]
firebase = [
  "google-auth>=2.35,<3",
  "google-cloud-firestore>=2.20,<3",
]
dev = [
  "build>=1.2,<2",
  "coverage[toml]>=7.6,<9",
  "mypy>=1.17,<2",
  "pytest>=8.4,<10",
  "pytest-asyncio>=1.1,<2",
  "pytest-cov>=6.2,<8",
  "ruff>=0.12,<1",
  "twine>=6.0,<7",
]
release = [
  "python-semantic-release==10.5.3",
]

[project.urls]
Homepage = "https://github.com/RaMin0/homeassistant-ok"
Repository = "https://github.com/RaMin0/homeassistant-ok"
Issues = "https://github.com/RaMin0/homeassistant-ok/issues"

[tool.hatch.build.targets.wheel]
only-include = ["custom_components/ok"]

[tool.pytest.ini_options]
minversion = "8.4"
addopts = ["-ra", "--strict-markers", "--strict-config"]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "live: tests that call the real external API and are skipped by default",
]

[tool.coverage.run]
branch = true
source = ["custom_components/ok"]

[tool.coverage.report]
show_missing = true
fail_under = 95

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["custom_components", "tests", "tools"]
exclude = [".codex", "docker/ha/config"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "ASYNC", "T20", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
follow_imports = "skip"
files = ["custom_components/ok"]

[tool.semantic_release]
allow_zero_version = true
commit_message = "chore(release): v{version}\n\nAutomatically generated by python-semantic-release"
commit_parser = "conventional"
major_on_zero = false
tag_format = "v{version}"
version_toml = ["pyproject.toml:project.version"]
version_variables = [
  "custom_components/ok/api/_version.py:__version__",
  "custom_components/ok/manifest.json:version",
]

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.changelog]
mode = "update"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
